# thirdlayer-prototype

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  DELIVERABLES.md  IMPLEMENTATION.md  README.md  VISUAL_OVERVIEW.md  pyproject.toml
demo/: run_demo.py  wikipedia_workflow.py
demo.egg-info/: PKG-INFO  SOURCES.txt
src/thirdlayer_prototype/: __initi__.py  main.py
src/thirdlayer_prototype/agent/: __init__.py  executor.py  loop.py  metrics.py  observer.py  planner.py  predictor.py  validator.py
src/thirdlayer_prototype/db/: __init__.py  schema.sql  storage.py
src/thirdlayer_prototype/models/: __init__.py  action.py  state.py
tests/: test_predictor.py  test_storage.py
