[project]
name = "thirdlayer-prototype"
version = "0.1.0"
description = "agentic browser workflow predictor"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "playwright>=1.40",
  "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",   # for testing FastAPI endpoints 
  "ruff>=0.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["flowpredict"]

[tool.ruff]
line-length = 100